# scholarlm

./: .gitignore  CLAUDE.md  EXPERIMENTS.md  EXPERIMENT_FRAMEWORK.md  FRONTIER_UNIFICATION_PLAN.md  README.md  demo.ipynb  pyproject.toml
analysis/: README.md  __init__.py  ablation.ipynb  ablation.py  ablation_comparison.ipynb  calibration.ipynb  calibration.py  calibration_gpt.py  calibration_llama.py  clustering.ipynb  clustering.py  cross_dataset.py  cross_dataset_probe.ipynb  extraction.ipynb  extraction.py  extraction_analysis.ipynb  loaders.py  metrics.py  plots.py  print_probe_heads.py  probe_analysis.ipynb  sensitivity.py  synthetic_probe_analysis.ipynb  synthetic_probe_analysis_unused_do_not_touch.ipynb  synthetic_probe_test.ipynb  synthetic_probe_test.py  synthetic_probe_test2.py  synthetic_probe_test3.py  synthetic_probe_train.ipynb  synthetic_probe_train.py  validity_evaluation.py
data/: apply_page_corrections.py  apply_review.py  generate_review_csv.py  pond_adversarial_judged.json  pond_adversarial_llama_full.json  pond_adversarial_llama_intermediate2.json  pond_adversarial_test_paged_llama_full.json  pond_page_chunks_intermediate2.json  pond_results_10_papers_v1_0.json  pond_results_10_papers_v1_2.json  pond_results_10_papers_v1_8.json  pond_results_10_papers_v1_full.json  pond_results_10_papers_v1_test.json  pond_results_10_papers_v1_vllm_validated.json  pond_results_10_papers_v1_vllm_validated_manual.json  test.html
data/demo/: attribute_prov.json  attributes.json  classification_trees_cleaned.txt  classification_trees_raw.txt  entities.json  entity_prov.json  events.json  final.json  run_metadata.json  values.json
data/govscape/: ocr_preprocessing.py
data/nfix/: README.md  create_probe_dataset.py  directory.json  ground_truth.csv  ground_truth.json  ground_truth_review.json  ground_truth_ten.csv  ground_truth_ten.json  ground_truth_ten_review.json  page_review.csv  (+5 more)
examples/: README.md  nfix_extraction.ipynb  ocr.ipynb  pond.ipynb  pond_clustering.ipynb  pond_elicit.ipynb  pond_extraction.ipynb  pond_lake.ipynb  pond_lake_analysis.ipynb  pond_lake_elicit_extraction.ipynb  pond_lake_extraction.ipynb
experiments/: README.md  config.yaml  full_paper_probe.py  full_paper_test.py  full_paper_test2.py  gen_serve_script.py  judge.py  judge2.py  judge3.py  judge4.py  judge_claude.py  judge_combine.py  judge_common.py  judge_gemini.py  judge_gpt.py  judge_llama.py  model_registry.py  ocr.py  ocr2.py  paths.py  pond.py  pond2.py  pond2_post.py  pond3.py  pond_combine.py  pond_vllm.py  probe.py  probe2.py  process_pdfs.py  run_ablation.py  run_ablation_claude.py  run_ablation_gemini.py  run_ablation_gpt.py  run_analysis.py  run_extraction.py  run_judge.py  run_judge_combine.py  run_judge_frontier.py  run_judge_frontier_v2.py  run_judge_interp.py  (+15 more)
figures/: flowchart.tex
results/: ablation_nfix.csv  ablation_pond.csv  extraction.csv  generate_ablation_table.py  generate_metrics_tables.py  metrics_gemma-3-27b_head.csv  metrics_gpt-oss-120b_head.csv  metrics_llama-3.1-8b_head.csv  predictions_gemma-3-27b_head.pkl  predictions_gpt-oss-120b_head.pkl  predictions_llama-3.1-8b_head.pkl
tests/: test_multi_gpu.py  test_smoke.py  test_utils.py
validation/: judge.py  judge2.py  judge_error.txt  judge_out.txt  judge_vllm.py  judge_vllm_error.txt  judge_vllm_out.txt  validate.py
(+189 files in other folders)
