[project]
name = "scholarlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "anthropic>=0.76.0",
    "backoff>=2.2.1",
    "bitsandbytes>=0.48.2",
    "docling>=2.61.1",
    "dotenv>=0.9.9",
    "google-genai>=1.59.0",
    "html5lib>=1.1",
    "jupyter>=1.1.1",
    "langchain-text-splitters>=1.0.0",
    "matplotlib>=3.10.7",
    "nnsight==0.5.11",
    "nnterp>=1.2.1",
    "olmocr>=0.4.4",
    "onnxruntime>=1.23.2",
    "openai>=2.6.0",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "psutil>=7.1.1",
    "pytesseract>=0.3.13",
    "pytest>=8.4.2",
    "rapidfuzz>=3.14.1",
    "rapidocr>=3.4.2",
    "scikit-learn==1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "streamlit>=1.50.0",
    "tiktoken>=0.12.0",
    "transformer-lens>=2.16.1",
    "vllm>=0.11.0",
]

[project.scripts]
scholarlm = "scholarlm:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]