[project]
name = "scholarlm"
version = "0.1.0"
description = "Extract structured data from scientific research papers using large language models."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Kevin Quinn" },
]
keywords = ["llm", "scientific-literature", "data-extraction", "ocr", "nlp"]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.76.0",
    "backoff>=2.2.1",
    "beautifulsoup4>=4.12.0",
    "docling>=2.61.1",
    "google-genai>=1.59.0",
    "html5lib>=1.1",
    "langchain-text-splitters>=1.0.0",
    "networkx>=3.0",
    "numpy>=1.26.0",
    "onnxruntime>=1.23.2",
    "openai>=2.6.0",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pillow>=10.0.0",
    "psutil>=7.1.1",
    "pydantic>=2.0.0",
    "pymupdf>=1.27.1",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
    "pytesseract>=0.3.13",
    "pyyaml>=6.0.0",
    "rapidfuzz>=3.14.1",
    "rapidocr>=3.4.2",
    "scikit-learn>=1.5.0",
    "scipy>=1.16.2",
    "tiktoken>=0.12.0",
    "tqdm>=4.0.0",
]

[project.optional-dependencies]
gpu = [
    "bitsandbytes>=0.48.2",
    "nnsight==0.5.11",
    "nnterp>=1.2.1",
    "olmocr>=0.4.4",
    "torch>=2.0.0",
    "transformer-lens>=2.16.1",
    "transformers>=4.0.0",
    "vllm>=0.11.0",
]
viz = [
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "streamlit>=1.50.0",
]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.4.2",
]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
